--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: shellcheck scripts/server_hardening.sh
 
       - name: shfmt
-        run: shfmt -d scripts/server_hardening.sh
+        run: shfmt -i 4 -ci -sr -d scripts/server_hardening.sh
 
   e2e:
     needs: lint
