Refactor Docker exec command in web hardening tests for improved environment variable handling and command execution

--- a/.github/workflows/apache_nginx_web_hardening.yml
+++ b/.github/workflows/apache_nginx_web_hardening.yml
@@ -152,7 +152,15 @@ jobs:
           SERVICE: ${{ matrix.service }}
         run: |
           container="${{ matrix.name }}"
-          docker exec "$container" bash -lc "set -euo pipefail; ${INSTALL_CMD}; systemctl enable --now ${SERVICE}"
+          docker exec \
+            -e INSTALL_CMD="$INSTALL_CMD" \
+            -e SERVICE="$SERVICE" \
+            "$container" bash -s <<'EOF'
+          set -euo pipefail
+          # Execute the per-matrix install command (may contain multiple lines)
+          eval "$INSTALL_CMD"
+          systemctl enable --now "$SERVICE"
+          EOF
 
       - name: Copy repository into container
         run: |
