Refactor web server detection functions for improved accuracy and maintainability

--- a/.github/workflows/apache_nginx_web_hardening.yml
+++ b/.github/workflows/apache_nginx_web_hardening.yml
@@ -170,7 +170,7 @@ jobs:
       - name: Run web hardening script
         run: |
           container="${{ matrix.name }}"
-          docker exec "$container" bash -lc '
+          docker exec "$container" env PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" bash -lc '
             set -euo pipefail
             cd /srv/hardening
             chmod +x scripts/apache_nginx_web_hardening.sh
