--- a/.github/workflows/server_hardening.yml
+++ b/.github/workflows/server_hardening.yml
@@ -31,6 +31,7 @@ jobs:
         run: shfmt -i 4 -ci -sr -d scripts/server_hardening.sh
 
   e2e:
+    name: e2e (${{ matrix.name }})
     needs: lint
     runs-on: ubuntu-latest
     strategy:
